# rs485_v3_1

./: .gitmodules  .mxproject  CMakeLists.txt  RF_IO_V3.ioc  STM32H523xx_FLASH.ld  build.bat  github.md  prompt.md
Application/: CMakeLists.txt
Board/: CMakeLists.txt  board.c  board.h
Core/Inc/: FreeRTOSConfig.h  app_freertos.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h
Core/Src/: app_freertos.c  main.c  rtc.c  stm32h5xx_it.c  tim.c  usart.c
cmake/stm32cubemx/: CMakeLists.txt
libs/: CMakeLists.txt
netif/usbif/: CMakeLists.txt  usb_netif.c
synaptix/: CMakeLists.txt
synaptix/app/: CMakeLists.txt  app.c  app.h  app_config.h
synaptix/app/user/indicator/: indicator.c  indicator.h
synaptix/app/user/modbus/: user_mb_app.c
synaptix/app/user/rf/: rf_app.c
synaptix/app/user/shell/: shell_app.c  shell_commands.c
synaptix/app/user/usb_rs485/: usb_rs485.c  usb_rs485.h
synaptix/board/: CMakeLists.txt
synaptix/bsp/: CMakeLists.txt  bsp_board_gpio.c  bsp_board_gpio.h  bsp_uart.h  bsp_usb.c  bsp_usb.h
synaptix/services/: CMakeLists.txt
synaptix/services/modbus/: CMakeLists.txt  modbus_service.c
synaptix/services/modbus/mbport/: portserial.c  porttimer.c
synaptix/services/web_service/: web_service.c
synaptix/utils/: CMakeLists.txt
